# CYAN-FLAME-CONTROL-PLANE-SERVER

./: Cargo.toml  build.rs  render.yaml
benchmarks/: gpu_validation_suite.rs
crates/symmetrix-galois/src/: lib.rs
crates/symmetrix-sheaf/src/: lib.rs
crates/symmetrix-tensor/src/: lib.rs
proto/: cyan_flame.proto
qanban/src/: qanban_cli.rs  qanban_core.rs
src/: bandwidth_cascade.rs  lib.rs  qagml_integration.rs  qanban_integration.rs  uao_qtcam_cache.rs  uao_qtcam_integration.rs
src/gfef/: api.rs  calibration.rs  extraction.rs  index.rs  mod.rs  prediction.rs  storage.rs  subscription.rs  watcher.rs
src/grpc/: allocation.rs  auth.rs  calibration.rs  certificate.rs  certificate_service.rs  compute_calibration.rs  dashboard_metrics.rs  gpu_detection.rs  gpu_service.rs  mod.rs  operations.rs  pcie_amplification.rs  server.rs  telemetry.rs  tls.rs
tests/: compute_calibration_tests.rs  gfef_integration_tests.rs  pcie_amplification_tests.rs  stress_tests.rs
uao-qtcam/src/unified/: tcam_engine.rs
