[package]
name = "symmetrix-core"
version = "0.1.0"
edition = "2021"
authors = ["SYMMETRIX COMPUTING LTD"]
description = "Revolutionary CPU-native mathematical operating system replacing GPU computing"
license = "MIT OR Apache-2.0"
repository = "https://github.com/symmetrix-computing/symmetrix-core"
keywords = ["hpc", "virtualization", "mathematics", "sheaf-theory", "galois-fields"]
categories = ["mathematics", "virtualization", "os"]

[workspace]
members = [
    "crates/symmetrix-sheaf",
    "crates/symmetrix-galois",
    "crates/symmetrix-tensor",
]

[dependencies]
# Workspace crates
symmetrix-sheaf = { path = "crates/symmetrix-sheaf" }
symmetrix-galois = { path = "crates/symmetrix-galois" }
symmetrix-tensor = { path = "crates/symmetrix-tensor" }

# QANBAN Integration - Quantum-Accelerated Network Bandwidth Amplification
qanban = { path = "qanban" }

# QAGML Integration - Quantum-Accelerated GPU Memory Lookup (10M× memory + 2M× bus width amplification)
qagml = { path = "qagml" }

# UAO-QTCAM Integration - Unified Software-Defined TCAM (1,250× speedup over hardware TCAM)
uao-qtcam-unified = { path = "uao-qtcam" }

# Core mathematical libraries
num-bigint = "0.4"
num-complex = "0.4"
num-traits = "0.2"
nalgebra = "0.32"
ndarray = "0.15"

# Async runtime and system integration
tokio = { version = "1.0", features = ["full"] }
async-trait = "0.1"
futures = "0.3"

# Serialization and configuration
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
toml = "0.8"
chrono = { version = "0.4", features = ["serde"] }

# Logging and error handling
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"
thiserror = "1.0"

# Memory management and performance
memmap2 = "0.9"
rayon = "1.8"
crossbeam = "0.8"

# Cryptography and security
ring = "0.17"
rustls = "0.21"
md5 = "0.7"
rcgen = { version = "0.12", features = ["pem", "x509-parser"] }
x509-parser = "0.16"
der-parser = "9.0"

# System integration
libc = "0.2"
nix = "0.27"

# CLI and utilities
clap = { version = "4.0", features = ["derive"] }
num_cpus = "1.16"
rand = "0.8"

# WebSocket support (for VXLAN over HTTPS on Render)
tokio-tungstenite = "0.21"
futures-util = "0.3"
sha1 = "0.10"
base64 = "0.21"

# Control Plane HTTP dependencies
axum = { version = "0.7", features = ["ws", "multipart"] }
tower = { version = "0.4", features = ["util", "timeout"] }
tower-http = { version = "0.5", features = ["cors", "trace", "compression-gzip"] }
uuid = { version = "1.6", features = ["v4", "serde"] }
sha2 = "0.10"
hex = "0.4"
bincode = "1.3"
flate2 = "1.0"
bytemuck = { version = "1.14", features = ["derive"] }
reqwest = { version = "0.11", features = ["json", "stream"] }
sqlx = { version = "0.7", features = ["runtime-tokio", "postgres", "uuid", "chrono"], optional = true }

# gRPC dependencies (tonic framework)
tonic = { version = "0.12", features = ["tls", "tls-roots", "gzip", "zstd"] }
tonic-reflection = "0.12"
prost = "0.13"
prost-types = "0.13"
tokio-stream = { version = "0.1", features = ["sync"] }
async-stream = "0.3"
sysinfo = "0.30"

# TUI Dashboard dependencies
ratatui = "0.26"
crossterm = "0.27"

[build-dependencies]
tonic-build = { version = "0.12", features = ["prost"] }
prost-build = "0.13"

[dev-dependencies]
criterion = "0.5"
proptest = "1.4"
tempfile = "3.8"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
opt-level = 1
debug = true

[[bin]]
name = "symmetrix-daemon"
path = "src/bin/daemon.rs"

[[bin]]
name = "symmetrix-benchmark"
path = "src/bin/benchmark.rs"

[[bin]]
name = "symmetrix-gpu-benchmark"
path = "benchmarks/gpu-comparison.rs"

[[bin]]
name = "symmetrix-cli"
path = "src/bin/cli.rs"

[[bin]]
name = "symmetrix-fabric"
path = "src/bin/symmetrix_fabric.rs"

[[bin]]
name = "symmetrix-cascade-benchmark"
path = "src/bin/cascade_benchmark.rs"

[[bin]]
name = "symmetrix-control-plane"
path = "src/bin/control_plane_server.rs"
required-features = ["gfef"]

[[bin]]
name = "cyan-flame-grpc-server"
path = "src/bin/grpc_server.rs"

[[bin]]
name = "cyan-flame-unified"
path = "src/bin/unified_server.rs"

[[bin]]
name = "cyan-flame-dashboard"
path = "src/bin/dashboard.rs"

[[bin]]
name = "cyan-flame-calibration-dashboard"
path = "src/bin/calibration_dashboard.rs"

[features]
default = ["sheaf-scheduler", "galois-acceleration", "tensor-folding", "qanban-integration", "qagml-integration", "uao-qtcam-integration"]
sheaf-scheduler = []
galois-acceleration = []
tensor-folding = []
quantum-matrix = []
group-ring-convolution = []
kernel-integration = []
qanban-integration = []
qagml-integration = []
uao-qtcam-integration = []
gfef = []  # GFEF module (not yet implemented)
